finalize tile layouts `squares` and `icons`

--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -1,4 +1,4 @@
-<div class="offcanvas offcanvas-end" tabindex="-1" id="menu">
+<div class="offcanvas offcanvas-end show" tabindex="-1" id="menu">
     <div class="offcanvas-header">
         <button type="button" class="btn-inline btn-none">
             <i class="fa-solid fa-fw"></i>
