--- a/src/_includes/part/tile-squares.html
+++ b/src/_includes/part/tile-squares.html
@@ -1,3 +1,6 @@
+{%- assign tile_width = include.width | default: "xs" -%}
+<!-- auto | xs | sm | md | lg | xl | xxl -->
+
 {%- assign polygon = include.polygon | default: const.default_polygon -%}
 <!-- circle | 4 | 5 | 6 | 8 | jsxgraph -->
 
@@ -45,7 +48,9 @@
     {%- assign target = data.target | default: "_self" -%}
     {%- endif -%}
     <a href="{{ link }}" target="{{ target }}"
-       class="d-block p-1 w-100 h-100 square {{ class }} btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} overflow-hidden text-center tile-button tile-button-squares"
+       class="btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} d-block mx-auto
+              {%- if tile_width=='auto' %} w-100 w-90-over-xs w-80-over-md {% else %} w-fix-{{tile_width}} w-max-100 w-max-90-over-xs mb-xs-2 {% endif -%}
+              square {{ class }} overflow-hidden text-center p-1 tile-button tile-button-squares"
     >
         <div class="d-flex flex-column w-100 h-100">
             {%- if data.image -%}
