--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -29,3 +29,5 @@
 @color_link: mix(@color_primary, #fff, (@threshold_light + @threshold_light / 2));
 
 @rounded_max_radius: 20%;
+
+@backdrop_opacity: 0.5;
