--- a/src/assets/less/general.less
+++ b/src/assets/less/general.less
@@ -43,13 +43,13 @@ footer,
 }
 
 .tile-button-squares .tile-label {
-  --bs-body-font-size: 0.8rem;
-  font-size: 0.8rem;
+  --bs-body-font-size: 1rem; // 0.8rem;
+  font-size: 1rem; // 0.8rem;
 }
 
 .tile-button-icons .tile-label {
-  --bs-body-font-size: 0.8rem;
-  font-size: 0.8rem;
+  --bs-body-font-size: 1rem; // 0.8rem;
+  font-size: 1rem; // 0.8rem;
 }
 
 .icon-external-link {
