new clipping types

--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -1,10 +1,18 @@
 {%- assign polygon = include.polygon | default: const.default_polygon -%}
-<!-- circle | 4 | 5 | 6 | 8 | jsxgraph -->
+<!-- circle | 4 | 5 | 6 | 8 | jsxgraph | jsxgraph-pure | jsxgraph-plain -->
 
 {%- if polygon == "jsxgraph" -%}
 {%- assign class = "jsxgraph-logo-clip" -%}
-{%- assign padding_x = "0" -%}
-{%- assign padding_y = "0" -%}
+{%- assign padding_x = "3%" -%}
+{%- assign padding_y = "3%" -%}
+{%- elsif polygon == "jsxgraph-pure" -%}
+{%- assign class = "jsxgraph-logo-pure-clip" -%}
+{%- assign padding_x = "5%" -%}
+{%- assign padding_y = "5%" -%}
+{%- elsif polygon == "jsxgraph-plain" -%}
+{%- assign class = "jsxgraph-logo-plain-clip" -%}
+{%- assign padding_x = "5%" -%}
+{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "circle" -%}
 {%- assign class = "circle-clip" -%}
 {%- assign padding_x = "10%" -%}
