--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -308,8 +308,36 @@ img {
   }
 }
 
+// clipping
+
 .jsxgraph-logo-clip {
   .rounded-0();
   .rounded-top-start-max();
   .rounded-bottom-end-max();
+}
+
+.jsxgraph-logo-pure-clip {
+  aspect-ratio: 1/1;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  clip-path: path("M59.528056,5.6692913c-9.6619873,0-18.3110352,4.4177246-24.03479,11.3388672h106.2398682v106.2390137c6.9206543-5.723877,11.3378906-14.3728027,11.3378906-24.0344238V5.6692913H59.528056Z M5.6692913,59.5275067v93.543457h93.5429688c17.1933594,0,31.1816406-13.987793,31.1816406-31.1811523V28.3463543H36.850932c-17.1933594,0-31.1816406,13.987793-31.1816406,31.1811523Z");
+  clip-rule: evenodd;
+
+  padding: 5%;
+}
+
+.jsxgraph-logo-plain-clip {
+  aspect-ratio: 1/1;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  clip-path: path("M5.6692913,36.8503413v93.543457h93.5429688c17.1933594,0,31.1816406-13.987793,31.1816406-31.1811523V5.669189H36.850932c-17.1933594,0-31.1816406,13.987793-31.1816406,31.1811523Z");
+  clip-rule: evenodd;
+
+  padding: 5%;
 }
