finalize new clipping types

--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -132,4 +132,9 @@
 <link rel="stylesheet" type="text/css" href="{{ relBase }}/assets/website.css?v={{ site.time | date: '%Y%m%d%H%M%S%L' }}">
 <script type="text/javascript" src="{{ relBase }}/assets/website.js"></script>
 
+<!-- ########################################
+                  clipping
+    ######################################### -->
+{% include main/clip-pattern.html %}
+
 {%- endif -%}
