--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -1,38 +1,20 @@
 {%- assign polygon = include.polygon | default: const.default_polygon -%}
-<!-- circle | 4 | 5 | 6 | 8 | jsxgraph | jsxgraph-pure | jsxgraph-plain -->
+<!-- circle | 4 | 5 | 6 | 8 | jsxgraph-pure | jsxgraph-plain -->
 
-{%- if polygon == "jsxgraph" -%}
-{%- assign class = "jsxgraph-logo-clip" -%}
-{%- assign padding_x = "3%" -%}
-{%- assign padding_y = "3%" -%}
-{%- elsif polygon == "jsxgraph-pure" -%}
+{%- if polygon == "jsxgraph-pure" -%}
 {%- assign class = "jsxgraph-logo-pure-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "jsxgraph-plain" -%}
 {%- assign class = "jsxgraph-logo-plain-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "circle" -%}
 {%- assign class = "circle-clip" -%}
-{%- assign padding_x = "10%" -%}
-{%- assign padding_y = "10%" -%}
 {%- elsif polygon == "4" -%}
 {%- assign class = "square-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "5" -%}
 {%- assign class = "pentagon-clip" -%}
-{%- assign padding_x = "10%" -%}
-{%- assign padding_y = "7%" -%}
 {%- elsif polygon == "8" -%}
 {%- assign class = "octagon-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- else -%}
 {%- assign class = "hexagon-clip" -%}
-{%- assign padding_x = "15%" -%}
-{%- assign padding_y = "10%" -%}
 {%- endif -%}
 
 <div class="{{ include.class }} shortcuts">
@@ -56,15 +38,16 @@
         <div class="col-9 col-xs-8 col-sm-4 col-md-3">
             <a href="{{ link }}" target="{{ target }}" class="link-quiet d-flex d-sm-block m-between-3 m-between-sm-0 align-items-center">
                 {% if i_page.icon %}
-                <div class="btn btn-{{ color }} square rounded-0 {{ class }} overflow-hidden w-fix-xxs w-fix-xs-over-sm w-fix-sm-over-md mx-sm-auto mb-sm-2 p-0"
-                     style="padding: {{padding_y}} {{padding_x}};"
-                >
-                    <div class="d-flex justify-content-center align-items-center h-100 w-100">
-                        <div class="big d-block d-sm-none">
-                            <i class="fa-fw {{ i_page.icon }}"></i>
-                        </div>
-                        <div class="biggest d-none d-sm-block">
-                            <i class="fa-fw {{ i_page.icon }}"></i>
+                <div class="square w-fix-xxs w-fix-xs-over-sm w-fix-sm-over-md mx-sm-auto overflow-hidden mb-sm-2">
+                    <div class="btn btn-{{ color }} rounded-0 {{ class }}"
+                    >
+                        <div class="d-flex justify-content-center align-items-center h-100 w-100">
+                            <div class="big d-block d-sm-none">
+                                <i class="fa-fw {{ i_page.icon }}"></i>
+                            </div>
+                            <div class="biggest d-none d-sm-block">
+                                <i class="fa-fw {{ i_page.icon }}"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
