--- a/src/_includes/part/tile-squares.html
+++ b/src/_includes/part/tile-squares.html
@@ -2,40 +2,22 @@
 <!-- auto | xs | sm | md | lg | xl | xxl -->
 
 {%- assign polygon = include.polygon | default: const.default_polygon -%}
-<!-- circle | 4 | 5 | 6 | 8 | jsxgraph | jsxgraph-pure | jsxgraph-plain -->
+<!-- circle | 4 | 5 | 6 | 8 | jsxgraph-pure | jsxgraph-plain -->
 
-{%- if polygon == "jsxgraph" -%}
-{%- assign class = "jsxgraph-logo-clip" -%}
-{%- assign padding_x = "3%" -%}
-{%- assign padding_y = "3%" -%}
-{%- elsif polygon == "jsxgraph-pure" -%}
+{%- if polygon == "jsxgraph-pure" -%}
 {%- assign class = "jsxgraph-logo-pure-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "jsxgraph-plain" -%}
 {%- assign class = "jsxgraph-logo-plain-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "circle" -%}
 {%- assign class = "circle-clip" -%}
-{%- assign padding_x = "10%" -%}
-{%- assign padding_y = "10%" -%}
 {%- elsif polygon == "4" -%}
 {%- assign class = "square-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- elsif polygon == "5" -%}
 {%- assign class = "pentagon-clip" -%}
-{%- assign padding_x = "10%" -%}
-{%- assign padding_y = "7%" -%}
 {%- elsif polygon == "8" -%}
 {%- assign class = "octagon-clip" -%}
-{%- assign padding_x = "5%" -%}
-{%- assign padding_y = "5%" -%}
 {%- else -%}
 {%- assign class = "hexagon-clip" -%}
-{%- assign padding_x = "15%" -%}
-{%- assign padding_y = "10%" -%}
 {%- endif -%}
 
 {%- assign max_size = include.max_size | default: include.data.size -%}
@@ -56,23 +38,22 @@
     {%- assign target = data.target | default: "_self" -%}
     {%- endif -%}
     <a href="{{ link }}" target="{{ target }}"
-       class="btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} d-block mx-auto
-              {%- if tile_width=='auto' %} w-100 {% else %} w-fix-{{tile_width}} w-max-100 {% endif -%}
-              square {{ class }} overflow-hidden text-center p-1 tile-button tile-button-squares"
-    >
-        <div class="d-flex flex-column w-100 h-100">
-            {%- if data.image -%}
-            <div class="flex-fill mx-n1 mt-n1 position-relative">
-                <div class="w-100 h-100 image-bg-cover" style="background-image: url('{{ relBase }}{{ data.image }}');"></div>
-                <div class="position-absolute top-0 start-0 end-0 bottom-0 bg-{{ data.colorclass | default: 'primary' }} opacity-33"></div>
-            </div>
-            {%- else -%}
-            <div class="flex-fill mb-n1 d-flex align-items-center justify-content-center" style="padding: {{padding_y}} {{padding_x}};">
-                <i class="biggest fa-fw {{ data.icon }}">{% if data.icon == '' %}&nbsp;{% endif %}</i>
-            </div>
-            {%- endif -%}
-            <div class="shorten-content-x tile-label" style="padding: 0 {{padding-x}};">
-                {{ data.title | default: "" }}
+       class="square {% if tile_width=='auto' %} w-100 {% else %} w-fix-{{tile_width}} w-max-100 {% endif %} overflow-hidden mx-auto mb-1 d-block tile-button tile-button-squares">
+        <div class="btn btn-{{ data.colorclass | default: 'primary' }} border border-{{ data.colorclass | default: 'primary' }} rounded-0 {{ class }}">
+            <div class="d-flex flex-column w-100 h-100">
+                {%- if data.image -%}
+                <div class="flex-fill mx-n1 mt-n1 position-relative">
+                    <div class="w-100 h-100 image-bg-cover" style="background-image: url('{{ relBase }}{{ data.image }}');"></div>
+                    <div class="position-absolute top-0 start-0 end-0 bottom-0 bg-{{ data.colorclass | default: 'primary' }} opacity-33"></div>
+                </div>
+                {%- else -%}
+                <div class="flex-fill mb-n1 d-flex align-items-center justify-content-center">
+                    <i class="biggest fa-fw {{ data.icon }}">{% if data.icon == '' %}&nbsp;{% endif %}</i>
+                </div>
+                {%- endif -%}
+                <div class="shorten-content-x tile-label">
+                    {{ data.title | default: "" }}
+                </div>
             </div>
         </div>
     </a>
