bugfix: logo-clip in shortcuts and tiles in Safari

--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -39,9 +39,8 @@
             <a href="{{ link }}" target="{{ target }}" class="link-quiet d-flex d-sm-block m-between-3 m-between-sm-0 align-items-center">
                 {% if i_page.icon %}
                 <div class="square w-fix-xxs w-fix-xs-over-sm w-fix-sm-over-md mx-sm-auto overflow-hidden mb-sm-2">
-                    <div class="btn btn-{{ color }} rounded-0 {{ class }}"
-                    >
-                        <div class="d-flex justify-content-center align-items-center h-100 w-100">
+                    <div class="btn btn-{{ color }} rounded-0 {{ class }}">
+                        <div class="d-flex justify-content-center align-items-center w-100">
                             <div class="big d-block d-sm-none">
                                 <i class="fa-fw {{ i_page.icon }}"></i>
                             </div>
