--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -29351,6 +29351,7 @@ small,
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 0;
 }
 .circle-clip {
   clip-path: circle(49% at 50% 50%);
