--- a/src/_includes/main/post-header.html
+++ b/src/_includes/main/post-header.html
@@ -50,7 +50,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="d-flex flex-wrap align-items-baseline text-muted">
+    <div class="d-flex flex-wrap align-items-center text-muted">
         <div class="me-3">
             <!--@formatter:off-->
             {% if post.subtitle %}
@@ -60,7 +60,7 @@
             {% endif %}
             <!--@formatter:on-->
         </div>
-        <div class="ms-auto">
+        <div class="ms-auto smaller">
             Posted on {{ post.date | date: "%B %-d, %Y" }}
             {% if post.author %}by {{ post.author }}{%- endif %}
         </div>
