--- a/src/_includes/main/post-header.html
+++ b/src/_includes/main/post-header.html
@@ -11,16 +11,21 @@
 {% if head_level <= 2 %}{%- assign tag_subtitle_display = head_level | plus: 3 | prepend: "h" -%}
 {% else %}{%- assign tag_subtitle_display = "normal" -%}{% endif %}
 
-<div>
-    <div class="d-flex flex-wrap align-items-center">
-        <div class="me-3">
-            <!--@formatter:off-->
-            <{{tag_title}} class="mt-0 mb-0">
-            {{ post.title }}
-            <{{tag_title_close}}>
-            <!--@formatter:on-->
-        </div>
-        <div class="ms-auto d-flex m-between-2">
+<div class="d-flex flex-wrap align-items-top mb-n2">
+    <div class="me-3 mb-2">
+        <!--@formatter:off-->
+        <{{tag_title}} class="mt-0 mb-0">
+        {{ post.title }}
+        <{{tag_title_close}}>
+        {% if post.subtitle %}
+        <{{tag_subtitle}} class="{{tag_subtitle_display}} m-0 text-muted">
+        {{ post.subtitle }}
+        <{{tag_subtitle_close}}>
+        {% endif %}
+        <!--@formatter:on-->
+    </div>
+    <div class="ms-auto my-auto mb-2">
+        <div class="d-flex m-between-2 justify-content-end">
             {% for cat in post.categories %}
             {% if link_badges %}
             <a class="badge rounded-pill btn btn-primary px-2 py-1" href="{{ relBase }}{{ site.categorylist.root }}{{ cat | slopify }}">
@@ -49,18 +54,7 @@
             {%- endif %}
             {% endfor %}
         </div>
-    </div>
-    <div class="d-flex flex-wrap align-items-center text-muted">
-        <div class="me-3">
-            <!--@formatter:off-->
-            {% if post.subtitle %}
-            <{{tag_subtitle}} class="{{tag_subtitle_display}} mb-0">
-                {{ post.subtitle }}
-            <{{tag_subtitle_close}}>
-            {% endif %}
-            <!--@formatter:on-->
-        </div>
-        <div class="ms-auto smaller">
+        <div class="mt-2 text-muted smaller">
             Posted on {{ post.date | date: "%B %-d, %Y" }}
             {% if post.author %}by {{ post.author }}{%- endif %}
         </div>
