--- a/src/_layouts/blog_overview.html
+++ b/src/_layouts/blog_overview.html
@@ -42,57 +42,72 @@
         {% include content.html %}
         {%- endif -%}
 
-        <div class="blog-overview">
+        <div class="row blog-overview">
 
-            <h2 class="d-none">List of Posts</h2>
-            <div class="list-group list-group-flush mx-n4 mb-4">
+            <div class="col-12 col-lg">
+                <h2 class="d-none">List of Posts</h2>
+                <div class="list-group list-group-flush mx-n4 mt-n4 mb-0">
 
-                {%- assign posts = paginator.posts | default: site.posts -%}
-                {% for post in posts %}
-                <a href="{{ post.url }}" class="list-group-item list-group-item-action px-4 py-4">
-                    <article class="post-preview">
-                        <div class="mb-4">
-                            {% include main/post-header.html post=post head_level=3 %}
-                        </div>
+                    {%- assign posts = paginator.posts | default: site.posts -%}
+                    {% for post in posts %}
+                    <a href="{{ post.url }}" class="list-group-item list-group-item-action px-4 py-4">
+                        <article class="post-preview">
+                            <div class="mb-4">
+                                {% include main/post-header.html post=post head_level=3 %}
+                            </div>
 
-                        {{ post.content | truncatewords: posts_intro | strip_html | xml_escape}}
-                    </article>
-                    <div class="text-end link-primary">Read more</div>
-                </a>
-                {% endfor %}
+                            {{ post.content | truncatewords: posts_intro | strip_html | xml_escape}}
+                        </article>
+                        <div class="text-end link-primary">Read more</div>
+                    </a>
+                    {% endfor %}
+                </div>
+
+                {% if paginator and paginator.total_pages > 1 %}
+                <div class="d-flex">
+                    {% if paginator.previous_page %}
+                    <a href="{{ paginator.previous_page_path }}" class="btn btn-outline-primary w-fix-lg me-auto">Newer Posts</a>
+                    {% endif %}
+                    {% if paginator.next_page %}
+                    <a href="{{ paginator.next_page_path }}" class="btn btn-outline-primary w-fix-lg ms-auto">Older Posts</a>
+                    {% endif %}
+                </div>
+                {% endif %}
 
             </div>
 
-            {% if paginator and paginator.total_pages > 1 %}
-            <div class="d-flex">
-                {% if paginator.previous_page %}
-                <a href="{{ paginator.previous_page_path }}" class="btn btn-outline-primary w-fix-lg me-auto">Newer Posts</a>
-                {% endif %}
-                {% if paginator.next_page %}
-                <a href="{{ paginator.next_page_path }}" class="btn btn-outline-primary w-fix-lg ms-auto">Older Posts</a>
-                {% endif %}
+            <div class="col-12 col-lg-2 ms-lg-5 ms-xl-6">
+                <h2 class="h3">Tags</h2>
+                <div class="css-cols-2 css-cols-sm-3 css-cols-md-4 css-cols-lg-1-important">
+                    {% assign sorted_tags = "" | split:"" %}
+                    {% for tag in site.tags %}
+                    {% assign sorted_tags = sorted_tags | push: tag[0] %}
+                    {% endfor %}
+                    {% assign sorted_tags = sorted_tags | sort_natural %}
+                    {% for tag in sorted_tags %}
+                    <a href="{{ relBase }}{{ site.taglist.root }}{{ tag | slopify }}" class="d-block badge bg-white text-start p-0 mx-0 mt-0 mb-3 link-primary">
+                        <i class="fa-solid fa-fw fa-tag"></i>
+                        {{ tag }}
+                    </a>
+                    {% endfor %}
+                </div>
+
+                <h2 class="h3">Categories</h2>
+                <div class="css-cols-2 css-cols-sm-3 css-cols-md-4 css-cols-lg-1-important">
+                    {% assign sorted_cats = "" | split:"" %}
+                    {% for cat in site.categories %}
+                    {% assign sorted_cats = sorted_cats | push: cat[0] %}
+                    {% endfor %}
+                    {% assign sorted_cats = sorted_cats | sort_natural %}
+                    {% for cat in sorted_cats %}
+                    <a href="{{ relBase }}{{ site.categorylist.root }}{{ cat | slopify }}" class="d-block badge bg-white text-start p-0 mx-0 mt-0 mb-3 link-primary">
+                        <i class="fa-solid fa-layer-group"></i>
+                        {{ cat }}
+                    </a>
+                    {% endfor %}
+                </div>
             </div>
-            {% endif %}
 
-            <h2>Tags</h2>
-            <ul>
-                {% assign sorted_tags = site.tags | sort %}
-                {% for tag in sorted_tags %}
-                <li><a href="{{ relBase }}{{ site.taglist.root }}{{ tag[0] | slopify }}">
-                    {{ tag[0] }}
-                </a></li>
-                {% endfor %}
-            </ul>
-
-            <h2>Categories</h2>
-            <ul>
-                {% assign sorted_cats = site.categories | sort %}
-                {% for cat in sorted_cats %}
-                <li><a href="{{ relBase }}{{ site.categorylist.root }}{{ cat[0] | slopify }}">
-                    {{ cat[0] }}
-                </a></li>
-                {% endfor %}
-            </ul>
         </div>
 
         {%- if page.render_this == "after" -%}
