--- a/src/assets/less/_vars.less
+++ b/src/assets/less/_vars.less
@@ -15,7 +15,7 @@
 @color_primary: #10427C;
 @color_secondary: mix(@color_primary, #0085a1); // = #08648f = 8,100,143
 
-@color_outer: rgb(90, 230, 130); // mix(#fff, @color_secondary, @threshold_faded); // = #c1d8e3 = 193,216,227
+@color_outer: #dcfa19;//rgb(250, 240, 120);// rgb(90, 230, 130); // mix(#fff, @color_secondary, @threshold_faded); // = #c1d8e3 = 193,216,227
 @color_outer_light: mix(@color_outer, #fff, @threshold_light);
 @color_outer_dark: mix(@color_outer, #10427C, @threshold_dark);
 
