change less path

--- a/src/assets/website.less
+++ b/src/assets/website.less
@@ -1,6 +1,6 @@
-@import url("../../../../PhpstormProjects/libraries/vars_default.less");
+@import url("../../../libraries/vars_default.less");
 @import url("less/_vars.less");
-@import url("../../../../PhpstormProjects/libraries/library_import.less");
+@import url("../../../libraries/library_import.less");
 
 @import (less,reference) url("bootstrap/bootstrap-individual.css");
 
