CSS before with logo-pure.png in classes section-test and content

--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -5,6 +5,7 @@ h1, .h1 {
 }
 
 .content h2::before, .content .h2::before,
+.my-auto h2::before, .my-auto .h2::before,
 .section-text h2::before, .section-text .h2::before {
   content: '';
   background: url('/media/logos/logo-pure.png');
@@ -13,11 +14,10 @@ h1, .h1 {
   display: inline-block;
   width: 2rem !important;
   height: 2rem !important;
-  margin-right: 0.5rem;
+  margin-right: 0.75rem;
   margin-left: -1.25rem;
   margin-bottom: -0.4rem;
 }
-
 
 h2, .h2 {
   font-size: 1.75rem;
