--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -8,7 +8,7 @@ h1, .h1 {
 .my-auto h2::before, .my-auto .h2::before,
 .section-text h2::before, .section-text .h2::before {
   content: '';
-  background: url('/media/logos/logo-pure.png');
+  background: url('{{ relBase }}/media/logos/logo-pure.png');
   background-size: 2rem 2rem;
   background-repeat: no-repeat;
   display: inline-block;
