--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -8,7 +8,7 @@ h1, .h1 {
 .my-auto h2::before, .my-auto .h2::before,
 .section-text h2::before, .section-text .h2::before {
   content: '';
-  background: url('{{ relBase }}/media/logos/logo-pure.png');
+  background: url('/media/logos/logo-pure.png');
   background-size: 2rem 2rem;
   background-repeat: no-repeat;
   display: inline-block;
@@ -100,6 +100,7 @@ h6:first-child, .h6:first-child {
 
     h2 {
       font-size: 1.8rem;
+      font-size: calc((2rem + var(--bs-body-font-size)) / 2.5);
       line-height: 1.4;
       -webkit-transition-property: font-size, font-weight, font-family;
       -webkit-transition-duration: .35s;
