--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -59654,7 +59654,7 @@ h1,
 .section-text h2::before,
 .section-text .h2::before {
   content: '';
-  background: url('{{ relBase }}/media/logos/logo-pure.png');
+  background: url('/media/logos/logo-pure.png');
   background-size: 2rem 2rem;
   background-repeat: no-repeat;
   display: inline-block;
@@ -59758,6 +59758,7 @@ h6:first-child,
 }
 .section-accordion .accordion-button h2 {
   font-size: 1.8rem;
+  font-size: calc((2rem + var(--bs-body-font-size)) / 2.5);
   line-height: 1.4;
   -webkit-transition-property: font-size, font-weight, font-family;
   -webkit-transition-duration: 0.35s;
