--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -56,7 +56,7 @@ h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
-  margin-top: 4rem;
+  margin-top: 3rem;
 }
 
 h1:first-child, .h1:first-child,
@@ -76,10 +76,15 @@ h6:first-child, .h6:first-child {
     font-size: var(--bs-toast-font-size) !important;
   }
 }
+/// Text ///
 
+.section-text h2 {
+  margin-top: 3rem !important;
+}
 /// Accordion ///
 
 .section-accordion {
+  margin-bottom: 0rem !important;
   .accordion-button {
     -webkit-transition-property: height;
     -webkit-transition-duration: .35s;
