--- a/src/_includes/main/head.html
+++ b/src/_includes/main/head.html
@@ -36,10 +36,17 @@
 <!-- ########################################
                     icons
    ######################################### -->
+
 <link rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
 <link rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/16.png">
 <link rel="icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
 <link rel="shortcut icon" type="image/x-icon" href="{{ relBase }}/media/favicon/32.png">
+<link rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon" >
+<link rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" type="image/x-icon" >
+<link rel="icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon" >
+<link rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-light.svg" media="(prefers-color-scheme: light)" type="image/x-icon" >
+<link rel="icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
+<link rel="shortcut icon" href="{{ relBase }}/media/favicon/logo-dark.svg" media="(prefers-color-scheme: dark)" type="image/x-icon" >
 
 {% if page.external_link==nil and page.is_separator!=true -%}
 <!-- ########################################
