--- a/src/resources/templates/src/html-katex.html
+++ b/src/resources/templates/src/html-katex.html
@@ -16,7 +16,7 @@
             onload="renderMathInElement(document.body);"></script>
 </head>
 <body>
-    <div id="box" class="jxgbox" style="width:500px; height:500px;"></div>
+    <div id="box" class="jxgbox" style="width:500px; aspect-ratio: 1/1;"></div>
     <script>
         JXG.Options.text.useKatex = true; // Enable KaTeX for all JSXGraph elements!
         var board = JXG.JSXGraph.initBoard(
@@ -24,7 +24,7 @@
                 boundingbox: [-10, 10, 10, -10],
                 axis:true
             });
-        var A = board.create('point', [-4,  5], { name: '$$A_{max}$$' });
+        var A = board.create('point', [-4,  5], { name: '$$A_{\\max}$$' });
 
         // Insert JSXGraph code here!
 
