--- a/src/resources/templates/src/html-mathjax.html
+++ b/src/resources/templates/src/html-mathjax.html
@@ -10,7 +10,7 @@
             id="MathJax-script" async></script>
 </head>
 <body>
-<div id="box" class="jxgbox" style="width:500px; height:500px;"></div>
+<div id="box" class="jxgbox" style="width:500px; aspect-ratio: 1/1;"></div>
 <script>
     JXG.Options.text.useMathJax = true; // Enable MathJax for all JSXGraph elements!
     var board = JXG.JSXGraph.initBoard(
@@ -18,7 +18,7 @@
             boundingbox: [-10, 10, 10, -10],
             axis:true
         });
-    var A = board.create('point', [-4,  5], { name: '$$A_{max}$$' });
+    var A = board.create('point', [-4,  5], { name: '$$A_{\\max}$$' });
 
     // Insert JSXGraph code here!
 
