--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -84,7 +84,8 @@ h6:first-child, .h6:first-child {
   }
 }
 
-.section-accordion .accordion-header .accordion-button {
+.section-accordion .accordion-header .accordion-button,
+.section-cards .card-body {
   h2:before,
   .h2:before {
     display: none;
