--- a/src/_includes/main/topbar.html
+++ b/src/_includes/main/topbar.html
@@ -6,7 +6,7 @@
             <a class="text-primary my-n2 py-2 me-2" href="{{ relBase }}">
                 <div class="topbar-nosplash">
                     <img class="d-block d-sm-none h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
-                    <img class="d-none d-sm-block h-fix-md w-auto mb-n1 mt-2 mb-2" src="{{ relBase }}/media/logos/logo.png"/>
+                    <img class="d-none d-sm-block h-fix-md w-auto" src="{{ relBase }}/media/logos/logo.png"/>
                 </div>
                 <div class="topbar-onlysplash">
                     <img class="d-none d-md-block h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
