bugfix: blog tags

--- a/src/_layouts/blog_overview.html
+++ b/src/_layouts/blog_overview.html
@@ -44,7 +44,7 @@
 
         <div class="row blog-overview">
 
-            <div class="col-12 col-lg">
+            <div class="col-12 col-lg-9">
                 <h2 class="d-none">List of Posts</h2>
                 <div class="list-group list-group-flush mx-n4 mt-n4 mb-0">
 
@@ -76,7 +76,7 @@
 
             </div>
 
-            <div class="col-12 col-lg-2 ms-lg-5 ms-xl-6">
+            <div class="col-12 col-lg-2 ms-lg-auto">
                 <h2 class="h3">Tags</h2>
                 <div class="css-cols-2 css-cols-sm-3 css-cols-md-4 css-cols-lg-1-important">
                     {% assign sorted_tags = "" | split:"" %}
