--- a/src/_includes/main/topbar.html
+++ b/src/_includes/main/topbar.html
@@ -2,20 +2,20 @@
 
 <header class="position-{% if splash == true %}fixed{% else %}sticky{% endif %} top-0 start-0 end-0 p-3 z-index-outer {% if splash == true %}topbar-splash{% else %}mb-4{% endif %}" id="topbar">
     <div class="d-flex justify-content-between align-items-center">
-        <div class="d-flex align-items-center">
-            <a class="text-primary my-n2 py-2 me-2" href="{{ relBase }}">
-                <div class="topbar-nosplash">
-                    <img class="d-block d-sm-none h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
-                    <img class="d-none d-sm-block h-fix-md w-auto" src="{{ relBase }}/media/logos/logo.png"/>
+        <a class="d-flex align-items-center text-primary" href="{{ relBase }}">
+            <div class="d-inline my-n2 py-2 me-2">
+                <div class="d-inline topbar-nosplash">
+                    <img class="d-inline d-sm-none h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
+                    <img class="d-none d-sm-inline h-fix-md w-auto" src="{{ relBase }}/media/logos/logo.png"/>
                 </div>
-                <div class="topbar-onlysplash">
-                    <img class="d-none d-md-block h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
+                <div class="d-inline topbar-onlysplash">
+                    <img class="d-none d-md-inline h-fix-md w-auto" src="{{ relBase }}/media/logos/logo-sm.png"/>
                 </div>
-            </a>
-            <div class="text-primary">
+            </div>
+            <div class="d-inline text-primary">
                 {{ const.version }}
             </div>
-        </div>
+        </a>
         <div></div>
         <div class="d-flex align-items-center m-between-3 m-between-md-4">
             <nav class="navbar navbar-expand m-0 p-0">
