--- a/src/assets/website.css
+++ b/src/assets/website.css
@@ -56602,13 +56602,31 @@ textarea.readonly {
 .carousel-static .carousel-item {
   transition: none;
 }
-.card-img:not(.border):not(.border-start):not(.border-end),
-.card-img-top:not(.border):not(.border-start):not(.border-end),
-.card-img-bottom:not(.border):not(.border-start):not(.border-end) {
+
+.card-img-overlay.card-img:not(.border):not(.border-start):not(.border-end),
+.card-img-overlay.card-img-top:not(.border):not(.border-start):not(.border-end),
+.card-img-overlay.card-img-bottom:not(.border):not(.border-start):not(.border-end) {
   width: calc(100% + 1px + 1px);
   margin-left: -1px;
   margin-right: -1px;
+}
+
+.card-img-overlay.card-img-top:not(.border):not(.border-start):not(.border-end) {
   margin-top: -1px;
+}
+
+.card-img-overlay.card-img-top:not(.border):not(.border-start):not(.border-end) {
+    margin-bottom: -1px;
+}
+
+.card,
+.card-img,
+.card-img-top,
+.card-img-bottom,
+.card-header,
+.card-body,
+.card-footer {
+    border-color: var(--bs-card-border-color) !important;
 }
 .opacity-0 {
   opacity: 0 !important;
