--- a/src/resources/templates/src/iframe.template.html
+++ b/src/resources/templates/src/iframe.template.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <iframe
-    src="iframe-src.html"
+        src="./iframe-src.template.html"
     style="width: 500px; height: 500px; overflow:hidden; border: none;"
     sandbox="allow-scripts"
     allow="fullscreen *;"
