--- a/src/_includes/sections/accordion.html
+++ b/src/_includes/sections/accordion.html
@@ -131,15 +131,18 @@
 
     {%- if open_hash != false -%}
     <script type="module">
-        if (JXG.exists($('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0])) {
-            bootstrap.Collapse.getOrCreateInstance(
-                $('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0],
-            ).show();
-        }
+        try {
+            if (JXG.exists($('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0])) {
+                bootstrap.Collapse.getOrCreateInstance(
+                    $('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0],
+                ).show();
+            }
 
-        window.setTimeout(function () {
-            $('#accordion-{{ include.index0 }} #' + location.hash.substring(1)).scrollIntoView();
-        }, 500);
+            window.setTimeout(function () {
+                $('#accordion-{{ include.index0 }} #' + location.hash.substring(1)).scrollIntoView();
+            }, 500);
+        } catch (e) {
+        }
     </script>
     {%- endif -%}
 </div>
