--- a/src/_includes/sections/subpages.html
+++ b/src/_includes/sections/subpages.html
@@ -59,7 +59,7 @@
             <a href="{{ link }}" target="{{ target }}" class="btn btn-{{ color }} square rounded-0 {{ class }} overflow-hidden" style="padding: {{ padding_y }} {{ padding_x }};">
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <div>
-                        {{ i_page.title_short | default: i_page.title }}
+                        {{ i_page.title }}
                     </div>
                 </div>
             </a>
