--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -53,7 +53,7 @@
                 {% endif %}
                 <div class="link-{{ color }}">
                     <div class="text-start d-block d-sm-none">
-                        {{ i_page.title_short | default: i_page.title }}
+                        {{ i_page.title_shortcuts | default: i_page.title }}
                         {% if i_page.subtitle %}
                         <div class="smaller">
                             {{ i_page.subtitle }}
@@ -61,7 +61,7 @@
                         {% endif %}
                     </div>
                     <div class="text-center d-none d-sm-block">
-                        {{ i_page.title_short | default: i_page.title }}
+                        {{ i_page.title_shortcuts | default: i_page.title }}
                         {% if i_page.subtitle %}
                         <div class="smaller">
                             {{ i_page.subtitle }}
