move less files outside src

--- a/src/assets/website.less
+++ b/src/assets/website.less
@@ -1,13 +1,3 @@
-@import url("../../../libraries/vars_default.less");
-@import url("less/_vars.less");
-@import url("../../../libraries/library_import.less");
+@import url("../../less/_index.less");
 
-@import (less,reference) url("bootstrap/bootstrap-individual.css");
-
-@import url("less/code.less");
-@import url("less/general.less");
-@import url("less/svg-color.less");
-@import url("less/splash.less");
-@import url("less/topbar.less");
-@import url("less/menu.less");
-@import url("less/additions.less");
+// Don't change anything here. Use directory ../../less
