--- a/less/_index.less
+++ b/less/_index.less
@@ -1,6 +1,6 @@
-@import url("../../libraries/vars_default.less");
+@import url("lib/vars_default.less");
 @import url("_vars.less");
-@import url("../../libraries/library_import.less");
+@import url("lib/library_import.less");
 
 @import url("code.less");
 @import url("general.less");
